--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
       "react-dom": "^16.13.0",
       "react-icons": "3.10.0",
       "react-js-pagination": "3.0.3",
+      "react-loader": "2.4.7",
+      "react-loader-spinner": "3.1.14",
       "react-router-dom": "^5.1.2",
       "react-scripts": "3.4.0",
       "tailwind.macro": "^1.0.0-alpha.10",
