--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
       "mobx": "5.15.0",
       "mobx-react": "6.1.4",
       "postcss-cli": "^7.1.0",
+      "rc-pagination": "2.2.5",
       "react": "^16.13.0",
+      "react-datepicker": "2.16.0",
       "react-dom": "^16.13.0",
       "react-icons": "3.10.0",
       "react-js-pagination": "3.0.3",
@@ -28,6 +30,7 @@
       "react-paginate": "6.3.2",
       "react-router-dom": "^5.1.2",
       "react-scripts": "3.4.0",
+      "react-select": "3.1.0",
       "tailwind.macro": "^1.0.0-alpha.10",
       "typescript": "3.8.3"
    },
