--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       "@emotion/styled": "^10.0.27",
       "@ib/api": "2.0.0",
       "@ib/api-constants": "1.0.8",
+      "@ib/api-utils": "2.0.0",
       "@ib/mobx-promise": "1.0.8",
       "@types/jest": "25.2.1",
       "@types/node": "13.11.0",
@@ -45,6 +46,7 @@
       "ts:build": "npm run build:css & react-scripts build",
       "ts:test": "react-scripts test --env=jest-environment-jsdom-sixteen",
       "ts:eject": "react-scripts eject",
+      "coverage": "react-app-rewired test --env=jest-environment-jsdom-sixteen --coverage --watchAll=false",
       "deploy": "export PUBLIC_URL=/2019/$C9_USER/react && npm run build && ./deploy.sh",
       "storybook": "start-storybook -p 8080 -s public",
       "build-storybook": "build-storybook -s public",
@@ -98,5 +100,11 @@
       "lint-staged": "10.2.6",
       "react-app-rewired": "2.1.5",
       "tailwindcss": "^1.2.0"
+   },
+   "jest": {
+      "testEnvironment": "node",
+      "collectCovearageFrom": [
+         "src/*,{ts,tsx,js,jsx}"
+      ]
    }
 }
