--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
       "jest-environment-jsdom-sixteen": "1.0.3",
       "lint-staged": "10.2.6",
       "react-app-rewired": "2.1.5",
+      "react-select-event": "4.1.4",
       "tailwindcss": "^1.2.0"
    },
    "jest": {
