--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
       "react-loader-spinner": "3.1.14",
       "react-paginate": "6.3.2",
       "react-router-dom": "^5.1.2",
+      "react-i18next": "11.7.0",
       "react-scripts": "3.4.0",
       "react-select": "3.1.0",
       "tailwind.macro": "^1.0.0-alpha.10",
